p244 업로드한 파일 읽어올 경로 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,16 @@ spring.thymeleaf.cache = false
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+#file max size ?? ? ?? ?? ???
+spring.servlet.multipart.maxFileSize=20MB
+
+#??? ?? ?? ??  want max file size
+spring.servlet.multipart.maxRequestSize=100MB
+
+#?? ??? ??? ?? item img upload location
+itemImgLocation=C:/shop/item
+
+#??? ??? ??
+uploadPath=file:///C:/shop/
+
