--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,8 +32,8 @@ spring.servlet.multipart.maxFileSize=20MB
 spring.servlet.multipart.maxRequestSize=100MB
 
 #?? ??? ??? ?? item img upload location
-itemImgLocation=C:/shop/item
+itemImgLocation=C:/LJH/shop/item
 
 #??? ??? ??
-uploadPath=file:///C:/shop/
+uploadPath=file:///C:/LJH/shop/
 
