--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,5 @@ itemImgLocation=C:/shop/item
 #??? ??? ??
 uploadPath=file:///C:/shop/
 
+#basic batch size
+spring.jpa.properties.hibernate.default_batch_fetch_size=1000
